--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -2,12 +2,13 @@
 const navItems = [
     { href: "/sluzby", text: "Služby" },
 
-
     { href: "/portfolio", text: "Portfolio" },
 
     { href: "/jak-to-funguje", text: "Jak to funguje" },
 
     { href: "/o-nas", text: "O nás" },
+
+    { href: "/blog", text: "Blog" },
 
     { href: "/kontakt", text: "Kontakt" },
 ];
