--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,12 @@ import Button from '../components/Button.astro';
             title="Tvoříme weby, které prodávají"
             subtitle="Moderní webová řešení pro váš business"
         >
-            <Button href="/kontakt" size="large">Nezávazná konzultace zdarma</Button>
+            <div class="flex flex-col gap-4 items-center">
+                <Button href="/kontakt" size="large">Kontaktujte nás</Button>
+                <a href="/dotaznik" class="text-base underline hover:text-primary transition-colors max-w-[40%] text-center">
+                    Získat konzultaci zdarma
+                </a>
+            </div>
         </Hero>
     </div>
 </Layout>
